# cgfs

./: scene.toml
cgfs/: Cargo.toml
cgfs/src/: camera.rs  canvas.rs  color.rs  lib.rs  raytracer.rs  scene.rs  toml.rs
rays/: Cargo.toml
rays/src/: _lib.rs  lib.rs  main.rs
web/: Cargo.toml  index.html  scene.toml
web/src/: desc.rs  lib.rs  main.rs  render.rs
