[package]
name = "cgfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
scene = []

[dependencies]
image = { version = "0.24", default-features = false, features = ["png"] } 
cgmath = "0.18"
toml = "0.5"