[package]
name = "rays"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#minifb = "0.20"
winit = "0.26"
pixels = "0.9"
cgfs = { path = "../cgfs", features = ["scene"] }
#mlua = { version = "0.7", features = ["lua54", "vendored"]}