[package]
name = "web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
wasm-bindgen = "0.2"
image = { version = "0.24", default-features = false }
cgfs = { path = "../cgfs", features = ["scene"] }

[dependencies.web-sys]
version = "0.3"
features = [
    "HtmlTextAreaElement",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Element",
]